# book-flow

./: .gitignore  README.md
book-flow-tauri/: eslint.config.mjs  package-lock.json  package.json  vite.config.ts
book-flow-tauri/src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
book-flow-tauri/src-tauri/migrations/2024-09-01-113246_create_user/: down.sql  up.sql
book-flow-tauri/src-tauri/migrations/2024-09-03-193901_create_books/: down.sql  up.sql
book-flow-tauri/src-tauri/migrations/2024-09-04-195642_create_loans/: down.sql  up.sql
book-flow-tauri/src-tauri/src/: main.rs  schema.rs
book-flow-tauri/src-tauri/src/application/: mod.rs
book-flow-tauri/src-tauri/src/application/commands/: get_book.rs  mod.rs  register_book.rs  register_loan.rs
book-flow-tauri/src-tauri/src/application/use_cases/: get_book.rs  get_user.rs  login.rs  mod.rs  register_book.rs  register_loan.rs  register_user.rs  update_user.rs
book-flow-tauri/src-tauri/src/domain/entities/: book.rs  loan.rs  mod.rs  user.rs  user_levels.rs
book-flow-tauri/src-tauri/src/domain/repositories/: user_repository.rs
book-flow-tauri/src-tauri/src/domain/services/: book_services.rs  loan_services.rs  mod.rs  user_services.rs
book-flow-tauri/src-tauri/src/infrastructure/db/: connection.rs
book-flow-tauri/src-tauri/src/infrastructure/repositories/: book_repository.rs  loan_repository.rs  mod.rs  user_repository.rs
book-flow-tauri/src-tauri/src/presentation/dto/: book_register_dto.rs  loan_register_dto.rs  login.rs  mod.rs  updated_user_role_dto.rs  user_register_dto.rs
(+35 files in other folders)
